syntax = "proto3";

package attestation_agent;

message ExtraCredential {
    string ControllerCrpToken = 1;
    string ControllerAttestationReport = 2;
    string ControllerCertChain = 3;
    string AAAttester = 4;
    string ContainerName = 5;
}

message GetEvidenceRequest {
    bytes RuntimeData = 1;
    ExtraCredential ExtraCredential = 2;
}

message GetEvidenceResponse {
    bytes Evidence = 1;
}

message GetTokenRequest {
    string TokenType = 1;
    ExtraCredential ExtraCredential = 2;
}

message GetTokenResponse {
    bytes Token = 1;
}

service AttestationAgentService {
    rpc GetEvidence(GetEvidenceRequest) returns (GetEvidenceResponse) {};
    rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {};
}
